--- a/ebanking/src/main/resources/application.properties
+++ b/ebanking/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.application.name=ebanking
 #eureka.client.serviceUrl.defaultZone=http://localhost:8111/eureka/
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8111/eureka/,http://127.0.0.1:8112/eureka/
 eureka.instance.prefer-ip-address=true
-server.port=8081
+server.port=8085
+
+
+baking.exchangerate.url=http://localhost:8089/rate
