update for test data

--- a/ebanking/src/main/resources/bee.properties
+++ b/ebanking/src/main/resources/bee.properties
@@ -13,9 +13,9 @@
 ##When only one type of database is used, setting it can improve efficiency
 #bee.db.dbName=mysql
 #bee.db.driverName = com.mysql.jdbc.Driver
-#bee.db.url =jdbc:mysql://127.0.0.1:3306/bee?characterEncoding=UTF-8&useSSL=false
-#bee.db.username = root
-#bee.db.password = 123456
+bee.db.url =jdbc:mysql://127.0.0.1:3306/bee?characterEncoding=UTF-8&useSSL=false
+bee.db.username = root
+bee.db.password = 123456
 
 #since V1.11
 #bee.db.jndiType=true
@@ -59,7 +59,7 @@ bee.osql.sqlKeyWordCase=lower
 #control Logger.logSQL(msg) use in Bee.
 bee.osql.showSQL=true
 # since v1.8
-bee.osql.showSql.showType=true
+bee.osql.showSql.showType=false
 bee.osql.showSql.showExecutableSql=true
 # since v1.7.0  it is effect when bee.log.loggerType is :systemLogger or fileLogger.
 bee.osql.showSql.donotPrintCurrentDate=true
